2015-04-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_update): Match the file regex of a syntax against
	the absolute, canonical path instead of against the path the user gave.
	This fixes Savannah bug #44288, reported by Mike Frysinger.
	* doc/syntax/po.nanorc: Improve the colouring of message tags.

2015-04-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Remove the unintended special
	case for replacing multiple occurrences of a literal ^ or $; see
	https://lists.gnu.org/archive/html/nano-devel/2015-04/msg00065.html.
	* src/search.c (findnextstr): Delete an always-FALSE parameter.
	* src/search.c (findnextstr): Rename the parameter 'whole_word'
	to 'whole_word_only', for clarity.

2015-04-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (findnextfile): Save the settings of the global
	case-sens, direction, and regexp flags, and restore them on exit.
	And do this not in do_filesearch() but in findnextfile(), so that
	it will also work for do_fileresearch().
	* src/text.c (do_int_spell_fix): Save and restore the global flags
	in the same short and quick way as above.
	* src/nano.c (main): Initialize the search and replace strings in
	a central place, to get rid of a bunch of ifs.
	* src/search.c (search_init_globals): Elide this tiny function.

2015-04-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (need_horizontal_update, need_vertical_update): Fuse
	two identical functions into one: need_screen_update().
	* src/prompt.c (need_statusbar_horizontal_update): Rename function
	to need_statusbar_update() as there is no vertical counterpart.
	* src/search.c (do_search, do_research): Delete redundant reprises
	of a regex search: finding an occurrence only at the very starting
	point of the search necessarily means it is the only occurrence.

2015-04-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c, src/nano.c, doc/man/nanorc.5, doc/texinfo/nano.texi: